# nautilus-namecodes

./: .gitignore  .readthedocs.yaml  LICENSE.md  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: test.yml  test_poety.yml  test_tox.yml
docs/: requirements.txt
docs/source/: _helpers.py  conf.py  index.md
docs/source/internal/: _helpers.md  _version.md  index.md
docs/source/public/: index.md  namecodes_dataclasses.md  nautilus_namecodes.md
docs/source/public/builder/: namecode_builder_dataclasses.md
docs/source/public/format/: generate_console.md  generate_markdown.md
docs/source/public/scheme/: namecode_values.md  namecodes.md
src/nautilus_namecodes/: __init__.py  __main__.py  _helpers.py  _version.py  main.py  namecodes_dataclasses.py
src/nautilus_namecodes/app/: _helpers_app.py  filename_app.py  namecode_app.py
src/nautilus_namecodes/builder/: namecode_builder_dataclasses.py
src/nautilus_namecodes/format/: filename_console.py  generate_console.py  generate_markdown.py  namecode_console.py  namecode_markdown.py
src/nautilus_namecodes/parser/: filename_data.py
src/nautilus_namecodes/scheme/v_0_0_1/: namecode_values.py  namecodes.py
src/nautilus_namecodes/scheme/v_0_1_0/: filename.py  filename_model.py  namecode_lookup.py  namecode_model.py  namecode_values.py  namecodes.py
tests/nautilus_namecodes/: _test.py
tests/nautilus_namecodes/builder/: test_builder.py
tests/nautilus_namecodes/filename/: test_filename.py
tests/nautilus_namecodes_tests/builder_tests/: builder_test.py
